--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="/main.js"></script>
+    <p id="text1" style="font-size: 30px">Text 1</p>
+    <p id="text2" style="font-size: 30px">Text 2</p>
+    <p id="text3" style="font-size: 30px">Text 3</p>
+    <script src="./main.js"></script>
   </body>
 </html>
